5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1793_1618.log
== TEST (2019-05-30 18:51:34) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
x = 0
sv = v[0]+"^"+ [i] + " + " 
print(sv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:30) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 1
x = 0
sv = v[0]+"^"+ str(i) + " + " 
print(sv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:51) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 1
x = 0
sv = str(v[0])+"^"+ str(i) + " + " 
print(sv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:06) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
x = 0
while i > 0:
	sv = str(v[0])+"^"+ str(i) + " + " 
	i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:56:19) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 1
x = 0
	sv = str(v[0])+ "x"+"^"+ str(i) + " + " 
	print(sv)
	

-- ERROR:
File "XXXX", line 6
    sv = str(v[0])+ "x"+"^"+ str(i) + " + " 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:56:27) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 1
x = 0
sv = str(v[0])+ "x"+"^"+ str(i) + " + " 
print(sv)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:39) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 1
while i > 0:
	sv = (str(v[0])+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
print(i)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:59:02) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i > 0:
	sv = (str(v[0])+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
print(i)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:59:52) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i > 0:
	sv = (str(v[0])+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + 1
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:58) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i > 0:
	sv = (str(v[0])+ "x"+"^"+ str(i) + " + ") * v[0:-1]
	i = i - 1
	sv = sv + 1
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:36) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[0])+ "x"+"^"+ str(i) + " + ") * v[0:-1]
	i = i - 1
	sv = sv + 1
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:06) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[0])+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + 1
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:14) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[0])+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = str(sv + 1)
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:42) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[0])+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:06:23) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[0:+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
File "XXXX", line 6
    sv = (str(v[0:+ "x"+"^"+ str(i) + " + ") * size(v)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:06:44) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[0:-1]+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
File "XXXX", line 7
    i = i - 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:05) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[0:]+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
File "XXXX", line 7
    i = i - 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:14) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[1]+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
File "XXXX", line 7
    i = i - 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:24) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[1]+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
File "XXXX", line 7
    i = i - 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:40) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[0:-1])+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:31) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[2])+ "x"+"^"+ str(i) + " + ") * size(v)
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:54) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[2])+ "x"+"^"+ str(i) + " + ") 
	i = i - 1
	sv = sv + str(1)
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:09:42) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[2])+ "x"+"^"+ str(i) + " + ") 
	i = i - 1
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:11:12) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	i = i + 1
	sv = (str(v[2])+ "x"+"^"+ str(i) + " + ") 
print(sv)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:11:31) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vet: ")))
sv = ""
i = 0
while i >= 0:
	sv = (str(v[2])+ "x"+"^"+ str(i) + " + ") 
	i = i + 1
print(i)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
